--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
-    "webpack-core": "webpack/core"
+    "webpack-core": "webpack/core",
+    "webpack-dev-server": "^4.3.0"
   }
 }
