--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-typescript": "^7.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -26,6 +27,7 @@
     "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
+    "typescript": "^4.4.3",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-core": "webpack/core",
